[gd_scene load_steps=46 format=3 uid="uid://colt26f7oy7l5"]

[ext_resource type="Script" uid="uid://bywdsomrkwwva" path="res://Scripts/battle.gd" id="1_rxw0g"]
[ext_resource type="Texture2D" uid="uid://dbx1i8njmovsx" path="res://Art/BattleAnim.png" id="2_huckk"]
[ext_resource type="Texture2D" uid="uid://dp6qdg6rv0d1o" path="res://Art/Battle Maps/Grasslands.png" id="3_8gmbr"]
[ext_resource type="PackedScene" uid="uid://dye47kuo08bdp" path="res://Objects/tetris.tscn" id="3_8ll0p"]
[ext_resource type="Texture2D" uid="uid://bkddtg3n1vkq0" path="res://Art/Battle Icons/otters_test.png" id="3_sr5sf"]
[ext_resource type="Script" uid="uid://dee3uwje8kr2u" path="res://Scripts/Enemy1.gd" id="7_flm14"]
[ext_resource type="Script" uid="uid://bq8ixq0djiay" path="res://Scripts/Enemy2.gd" id="8_srg80"]
[ext_resource type="FontFile" uid="uid://b34pemj15bf37" path="res://alagard.ttf" id="9_ajxlr"]

[sub_resource type="Animation" id="Animation_piw0h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(228, 91)]
}

[sub_resource type="Animation" id="Animation_2cf3p"]
resource_name = "battle_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ifa8b"]
resource_name = "player_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_mb1w0"]
resource_name = "turn_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(210, 91), Vector2(228, 91)]
}

[sub_resource type="Animation" id="Animation_mb7f7"]
resource_name = "turn_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(228, 91), Vector2(210, 91)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a6jqu"]
_data = {
&"RESET": SubResource("Animation_piw0h"),
&"battle_idle": SubResource("Animation_2cf3p"),
&"player_damaged": SubResource("Animation_ifa8b"),
&"turn_end": SubResource("Animation_mb1w0"),
&"turn_start": SubResource("Animation_mb7f7")
}

[sub_resource type="Animation" id="Animation_0nhpk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(228, 91)]
}

[sub_resource type="Animation" id="Animation_srg80"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_m1e1r"]
resource_name = "turn_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(210, 121), Vector2(228, 121)]
}

[sub_resource type="Animation" id="Animation_6a448"]
resource_name = "turn_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(228, 121), Vector2(210, 121)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3scq"]
_data = {
&"RESET": SubResource("Animation_0nhpk"),
&"player_damaged": SubResource("Animation_srg80"),
&"turn_end": SubResource("Animation_m1e1r"),
&"turn_start": SubResource("Animation_6a448")
}

[sub_resource type="Animation" id="Animation_gf6gc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(228, 151)]
}

[sub_resource type="Animation" id="Animation_8ll0p"]
resource_name = "player_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_lbf6h"]
resource_name = "turn_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(210, 151), Vector2(228, 151)]
}

[sub_resource type="Animation" id="Animation_ouhv5"]
resource_name = "turn_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(228, 151), Vector2(210, 151)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edid2"]
_data = {
&"RESET": SubResource("Animation_gf6gc"),
&"player_damaged": SubResource("Animation_8ll0p"),
&"turn_end": SubResource("Animation_lbf6h"),
&"turn_start": SubResource("Animation_ouhv5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sqlk"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sekds"]
bg_color = Color(0, 0, 0, 0.533333)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqy35"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hu565"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_golk4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_wvdgh"]
length = 0.001

[sub_resource type="Animation" id="Animation_24416"]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/AttackEnemy1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5m46f"]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/AttackEnemy1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q4dwp"]
resource_name = "enemy2_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer2/AttackEnemy2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.3001, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_obfos"]
resource_name = "enemy2_died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer2/AttackEnemy2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvjx1"]
_data = {
&"RESET": SubResource("Animation_wvdgh"),
&"enemy1_damaged": SubResource("Animation_24416"),
&"enemy1_died": SubResource("Animation_5m46f"),
&"enemy2_damaged": SubResource("Animation_q4dwp"),
&"enemy2_died": SubResource("Animation_obfos")
}

[sub_resource type="Animation" id="Animation_iadqt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-73, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackEnemy1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ictoa"]
resource_name = "hover"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackEnemy1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qf27p"]
resource_name = "turn_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2.5),
"update": 0,
"values": [Vector2(-60, 12), Vector2(-73, 12)]
}

[sub_resource type="Animation" id="Animation_0khdi"]
resource_name = "turn_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2.5),
"update": 0,
"values": [Vector2(-73, 12), Vector2(-60, 12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_giiw3"]
_data = {
&"RESET": SubResource("Animation_iadqt"),
&"hover": SubResource("Animation_ictoa"),
&"turn_end": SubResource("Animation_qf27p"),
&"turn_start": SubResource("Animation_0khdi")
}

[sub_resource type="Animation" id="Animation_4x88r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-73, 61)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qnaee"]
resource_name = "hover"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tih10"]
resource_name = "turn_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-60, 61), Vector2(-73, 61)]
}

[sub_resource type="Animation" id="Animation_nkmyx"]
resource_name = "turn_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-73, 61), Vector2(-60, 61)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0gn8"]
_data = {
&"RESET": SubResource("Animation_4x88r"),
&"hover": SubResource("Animation_qnaee"),
&"turn_end": SubResource("Animation_tih10"),
&"turn_start": SubResource("Animation_nkmyx")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_rxw0g")

[node name="player" type="Sprite2D" parent="."]
position = Vector2(228, 91)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_huckk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
libraries = {
&"": SubResource("AnimationLibrary_a6jqu")
}

[node name="tetris" parent="player" instance=ExtResource("3_8ll0p")]
visible = false
position = Vector2(-374.00003, -266)
scale = Vector2(0.75, 0.75)

[node name="player2" type="Sprite2D" parent="."]
visible = false
position = Vector2(228, 91)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_huckk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player2"]
libraries = {
&"": SubResource("AnimationLibrary_u3scq")
}

[node name="tetris" parent="player2" instance=ExtResource("3_8ll0p")]
visible = false
position = Vector2(-374, -266)
scale = Vector2(0.75, 0.75)

[node name="player3" type="Sprite2D" parent="."]
visible = false
position = Vector2(228, 151)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_sr5sf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player3"]
libraries = {
&"": SubResource("AnimationLibrary_edid2")
}

[node name="tetris" parent="player3" instance=ExtResource("3_8ll0p")]
visible = false
position = Vector2(-374, -386)
scale = Vector2(0.75, 0.75)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(123, 91)
zoom = Vector2(4, 4)

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = -129.0
offset_top = -49.0
offset_right = 698.0
offset_bottom = 430.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_8gmbr")

[node name="ActionsPanel" type="Panel" parent="."]
z_index = 100
layout_mode = 0
offset_left = -113.0
offset_top = -40.0
offset_right = 357.0
offset_bottom = 5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8sqlk")

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_sekds")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqy35")
theme_override_styles/hover = SubResource("StyleBoxFlat_hu565")
text = "Attack"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_sekds")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqy35")
theme_override_styles/hover = SubResource("StyleBoxFlat_hu565")
text = "Defend"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_sekds")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqy35")
theme_override_styles/hover = SubResource("StyleBoxFlat_hu565")
text = "Run"

[node name="TextBox" type="Panel" parent="."]
z_index = 100
layout_mode = 0
offset_left = -114.0
offset_top = -40.0
offset_right = 356.0
offset_bottom = 5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_golk4")

[node name="Text" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = 8.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("9_ajxlr")
text = "Text Goes Here"

[node name="Ticker" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 453.0
offset_top = 24.0
offset_right = 493.0
offset_bottom = 50.0
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xvjx1")
}

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -73.0
offset_top = 12.0
offset_right = -33.0
offset_bottom = 52.0
alignment = 1
script = ExtResource("7_flm14")

[node name="AttackEnemy1" type="TextureButton" parent="EnemyContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyContainer/AttackEnemy1"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_giiw3")
}

[node name="tetris" parent="EnemyContainer" instance=ExtResource("3_8ll0p")]
visible = false
position = Vector2(113.99999, -54)
scale = Vector2(0.375, 0.375)

[node name="EnemyContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -73.0
offset_top = 61.0
offset_right = -33.0
offset_bottom = 101.0
alignment = 1
script = ExtResource("8_srg80")

[node name="AttackEnemy2" type="TextureButton" parent="EnemyContainer2"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyContainer2/AttackEnemy2"]
libraries = {
&"": SubResource("AnimationLibrary_d0gn8")
}

[node name="tetris" parent="EnemyContainer2" instance=ExtResource("3_8ll0p")]
visible = false
position = Vector2(114, -103)
scale = Vector2(0.375, 0.375)

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_run_pressed"]
[connection signal="mouse_entered" from="EnemyContainer/AttackEnemy1" to="." method="_on_attack_enemy_1_mouse_entered"]
[connection signal="mouse_exited" from="EnemyContainer/AttackEnemy1" to="." method="_on_attack_enemy_1_mouse_exited"]
[connection signal="pressed" from="EnemyContainer/AttackEnemy1" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="EnemyContainer/AttackEnemy1" to="." method="_on_attack_enemy_1_pressed"]
[connection signal="mouse_entered" from="EnemyContainer2/AttackEnemy2" to="." method="_on_attack_enemy_2_mouse_entered"]
[connection signal="mouse_exited" from="EnemyContainer2/AttackEnemy2" to="." method="_on_attack_enemy_2_mouse_exited"]
[connection signal="pressed" from="EnemyContainer2/AttackEnemy2" to="." method="_on_attack_enemy_2_pressed"]
